--- a/.github/workflows/counter.yml
+++ b/.github/workflows/counter.yml
@@ -32,4 +32,4 @@ jobs:
           git diff --quiet && git diff --staged --quiet || git commit -m "Automatische Inkrementierung der Seitenaufrufe"
           git push origin main
         env:
-          GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MY_TOKEN: ${{ secrets.MY_TOKEN }}
